# Projects

./: CMakeLists.txt  DetectWords.py  PredictEmotions.py  PredictNextWord.py  README.md  buildJetson.sh  computervision.py  neuralNetwork.py  neuralNetworkClassification.py  processingImage.py  simpleBatteryVoltage.py  tensors.py
CheckCountryFromText/: CheckCountryFromText.py
CilassificationProblem/: neuralNetworkClassification.py
MNIST_ComputerVision/: computervision.py
MNIST_NeuralNetwork/: neuralNetwork.py
PredictEmotions/: PredictEmotions.py
PredictNextWord/: PredictNextWord.py
ProcessImageOpenCV/: processingImage.py
gui/: Main.qml  assets.qrc  car.hpp  gui  guibuild.sh  qrc_assets.cpp
makieta/: CMakeLists.txt
makieta/include/: CAN.hpp  ClassManager.hpp  includes.hpp
makieta/src/: CAN.cpp  ClassManager.cpp
src/Jetson/: CAN_Jetson_BMS.cpp  CAN_Jetson_Dem.cpp  UART_Jetson_BMS.cpp
src/Jetson/build-gui-Desktop-Debug/: CMakeCache.txt.prev
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appgui_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-3f5ab3a11caae1bc1528.json  cmakeFiles-v1-62d03726da7ca9fba35b.json  codemodel-v2-4c9b03becedaad40e60d.json  directory-.-Debug-a19eb7025a0d595bf343.json  index-2023-12-13T20-02-54-0886.json  target-all_qmllint-Debug-9c68a39fe535bf1a54ce.json  target-all_qmllint_json-Debug-11a0086f47f033d93fe9.json  target-all_qmllint_module-Debug-25642e060765182c5f4a.json  target-all_qmltyperegistrations-Debug-12aa57a728f21587bf46.json  target-appgui-Debug-79ec29d2da64e9c51fe7.json  (+6 more)
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-c9914200651eb4ad40ac.json  cmakeFiles-v1-e465390b169eaebdd235.json  codemodel-v2-700b9d3e1e244ffe0895.json  directory-.-Debug-a0088f344b8c6c4482d6.json  index-2023-12-12T18-54-19-0659.json  target-all_qmllint-Debug-6342bfc1f00815bda720.json  target-all_qmllint_json-Debug-01b645211e01bb6728ac.json  target-all_qmllint_module-Debug-eadbc47050ea958f018f.json  target-all_qmltyperegistrations-Debug-c7c660b2395c92244e1e.json  target-appgui-Debug-7113a65c4272f1cca419.json  target-appgui_autogen-Debug-014f2a9c4f72e3218548.json  target-appgui_autogen_timestamp_deps-Debug-54e6f5d5a41cc5479e99.json  target-appgui_qmlimportscan-Debug-3b84dd155c6162ce0bf8.json  target-appgui_qmllint-Debug-7725d2a9eeace4a2fded.json  target-appgui_qmllint_json-Debug-f5ab4c0072896bab6be2.json  target-appgui_qmllint_module-Debug-4d0055c6307c76703e8d.json  target-appgui_qmltyperegistration-Debug-f4b0c270f166d14bc4a0.json  target-appgui_tooling-Debug-ea2e2294d777a7bbb7be.json
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/deploy_qml_imports/: appgui.cmake
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appgui.cmake  Qt6_QmlPlugins_Imports_appgui.rsp
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/: appgui_raw_qml_0.qrc  qmake_gui.qrc  qrc_appgui_raw_qml_0.cpp  qrc_qmake_gui.cpp
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/qmlcache/: appgui_Main_qml.cpp  appgui_qml_loader_file_list.rsp  appgui_qmlcache_loader.cpp
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appgui_autogen/: deps  mocs_compilation.cpp
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/appgui_autogen/EWIEGA46WW/: moc_car.cpp  moc_car.cpp.d  moc_car.cpp.json  qrc_assets.cpp
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/gui/: appgui_qml_module_dir_map.qrc  qmldir
src/Jetson/build-gui-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/meta_types/: appgui_json_file_list.txt  appgui_json_file_list.txt.timestamp  qt6appgui_debug_metatypes.json
src/Jetson/drv/: CMakeLists.txt
src/Jetson/drv/include/: CameraDriver.hpp  DisplayDriver.hpp  JetsonDriver.hpp  MotorDriver.hpp
src/Jetson/drv/src/: CameraDriver.cpp  DisplayDriver.cpp  JetsonDriver.cpp  MotorDriver.cpp
src/Jetson/gui/: CMakeLists.txt  car.cpp  car.hpp  moc_car.cpp
src/Jetson/main/include/: ClassManager.hpp
src/Jetson/main/src/: ClassManager.cpp  main.cpp
src/Jetson/pub/: CMakeLists.txt
src/Jetson/pub/include/: CAN.hpp  Constants.hpp  DBC.hpp  DriverManager.hpp  Enums.hpp
src/Jetson/pub/src/: CAN.cpp  DriverManager.cpp
src/Jetson/swc/: CMakeLists.txt
src/Jetson/utils/include/: CThread.hpp  ReturnCode.hpp
src/Jetson/utils/src/: CThread.cpp
src/gui/: CMakeLists.txt  Makefile  car.cpp  gui.pro  main.cpp
